less/accordion.less
//updated ver
* {
  box-sizing:border-box;
}
.heading-primary {
  font-size:2em;
  padding:2em;
  text-align:center;
}

.accordion {
    position:relative;
    background-color: @white;
    font-weight: 400;
}
.container {
  max-width:960px;
  margin:0 auto;
  padding:2em 0 2em 0;
}

.accordion dl {
    margin-bottom: 0;


    a:hover, a:active, a:active:hover, a:focus {
      text-decoration: none;
      color: @white;
    }
}

.accordion {
  dt {
    font-weight: 400;
    text-transform: uppercase;

    a:focus {
      color: @white;
      text-decoration: none;
    }
  }

  dd {
    background-color: @white;
    font-size:1em;
    line-height:1.5em;

    a, a:active, a:visited, a:focus, a:hover {
      color: @blue;
      text-decoration: none;

      
    }
  }

  p {
    padding:1em 2em 1em 2em;
  }
}




.accordionTitle {
 background-color:@lighter-grey; 
   text-align:center;
        padding:2em;
        display:block;
        text-decoration:none;
        color:#fff;
        transition:background-color 0.5s ease-in-out;
  border-bottom:1px solid darken(@lighter-grey, 5%);
  &:before {
   content: "+";
   font-size: 1.5em;
   line-height: 1em;
   float: left; 
   transition: transform 0.3s ease-in-out;
  }
  &:hover {
    background-color:darken(@lighter-grey, 5%);
  }
}
.accordionTitleActive, 
.accordionTitle.is-expanded {
   background-color:darken(@lighter-grey, 10%);
    &:before {
     
      transform:rotate(-225deg);
    }
}
.accordionItem {
    height:auto;
    overflow:hidden; 
    //SHAME: magic number to allow the accordion to animate
    max-height: 1000em;
    
    transition: max-height 0.3s;   
 
    
    @media screen and (min-width:48em) {
      
      transition: max-height 0.3s
        
    }
    
   
}
.accordionItemCollapsed, 
.accordionItem.is-collapsed {
    max-height:0;
}
.animateIn {
     animation: accordionIn 0.65s normal ease both 1; 
}
.animateOut {
     animation: accordionOut 0.65s normal ease both 1;
}
@keyframes accordionIn {
  0% {
    opacity: 0;
    transform:scale(0.9) rotateX(-60deg);
    transform-origin: 50% 0;
  }
  100% {
    opacity:1;
    transform:scale(1);
  }
}

@keyframes accordionOut {
    0% {
       opacity: 1;
       transform:scale(1);
     }
     100% {
          opacity:0;
          transform:scale(0.9) rotateX(-60deg);
       }
}

